--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ node_modules/
 build/
 fonts/*
 boards/*
-!boards/exampleBoardData.pjb
+!boards/exampleBoard/
+!boards/exampleBoard/exampleBoardData.pjb
