--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "purpjeopardy",
   "version": "1.1.0",
+  "description": "A fun jeopardy game application.",
+  "author": "PurpJell",
   "main": "main.js",
-"scripts": {
-  "start": "cross-env NODE_ENV=development electron .",
-  "build": "electron-builder"
-},
+  "scripts": {
+    "start": "cross-env NODE_ENV=development electron .",
+    "build": "electron-builder"
+  },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "electron": "^34.1.1",
@@ -31,14 +33,21 @@
       "images/**/*",
       "fonts/**/*",
       {
-        "from": "boards/exampleBoardData",
-        "to": "html/boards/exampleBoardData"
-      },
-      "!boards"
+        "from": "boards/exampleBoard",
+        "to": "html/boards"
+      }
     ],
     "win": {
       "target": "nsis",
       "icon": "images/icons/game_icon.ico"
+    },
+    "nsis": {
+        "oneClick": false,
+        "allowToChangeInstallationDirectory": true,
+        "createDesktopShortcut": true,
+        "shortcutName": "PurpJeopardy",
+        "installerIcon": "images/icons/game_icon.ico",
+        "uninstallerIcon": "images/icons/game_icon.ico"
     }
   }
 }
