--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "purpjeopardy",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "A fun jeopardy game application.",
   "author": "PurpJell",
   "main": "main.js",
@@ -32,6 +32,7 @@
       "js/**/*",
       "images/**/*",
       "fonts/**/*",
+      "audio/**/*",
       {
         "from": "boards/exampleBoard",
         "to": "html/boards/exampleBoard"
